--- a/README.adoc
+++ b/README.adoc
@@ -31,6 +31,12 @@ Probhat, Munir Optima, National (Jatiya) etc.
 Most of the features of https://www.omicronlab.com/avro-keyboard.html[Avro Keyboard] are present in OpenBangla Keyboard. 
 So Avro Keyboard users will feel at home with OpenBangla Keyboard in Linux.
 
+image:https://travis-ci.org/OpenBangla/OpenBangla-Keyboard.svg?branch=master[Build status, link=https://travis-ci.org/OpenBangla/OpenBangla-Keyboard.svg?branch=master] {nbsp} 
+image:https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/total.svg[Downloads, link=https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/total.svg] {nbsp}
+image:https://img.shields.io/discord/436879388362014740.svg[Discord, link=https://discord.gg/HXK7QnJ]
+
+
+
 toc::[]
 
 I think most people use Markdown when creating documentation on GitHub. Markdown is great and easy, but I often create technical documentation or training material where some of the additional semantics of Asciidoc are really helpful.
