--- a/README.adoc
+++ b/README.adoc
@@ -78,6 +78,7 @@ If this does not workout for you please create an https://github.com/OpenBangla/
 OpenBangla Keyboard currently needs following libraries and binaries
 
 * GNU GCC, G++ compiler or Clang
+* Rust 1.32.0 or later
 * GNU Make or Ninja
 * CMake
 * Qt 5.5 or later
@@ -85,19 +86,19 @@ OpenBangla Keyboard currently needs following libraries and binaries
 
 On a Ubuntu/Debian system you can easily install them like this
 ```bash
-sudo apt-get install build-essential cmake libibus-1.0-dev qt5-default
+sudo apt-get install build-essential rustc cargo cmake libibus-1.0-dev qt5-default
 ```
 
 On a Fedora system you can easily install them like this
 ```bash
-sudo dnf install @buildsys-build cmake qt5-qtdeclarative-devel ibus-devel
+sudo dnf install @buildsys-build rust cargo cmake qt5-qtdeclarative-devel ibus-devel
 ```
 On a Arch Linux / Arch Based system you can easily install them like this
 ```bash
-sudo pacman -Sy base-devel cmake qt5-base libibus
+sudo pacman -Sy base-devel rust cmake qt5-base libibus
 ```
 
-After you have installed required libraries and binaries. Clone this repository and change the directory to the cloned folder and issue the commands:
+After you have installed required libraries and binaries. Clone this repository `git clone --recursive https://github.com/OpenBangla/OpenBangla-Keyboard.git` and change the directory to the cloned folder and issue the commands:
 ```bash
 mkdir build && cd build
 cmake ..
