--- a/README.adoc
+++ b/README.adoc
@@ -24,12 +24,12 @@ endif::[]
 ++++
 
 
-*OpenBangla Keyboard* is an OpenSource, Unicode compliant Bengali Input Method for GNU/Linux systems.
-It's a full fledged Bengali input method with typing automation tools, includes many famous typing methods such as Avro Phonetic,
+*OpenBangla Keyboard* is an open source, Unicode compliant, Bangla input method for GNU/Linux systems.
+It's a full-fledged Bangla input method with typing automation tools, includes many famous typing methods such as Avro Phonetic,
 Probhat, Munir Optima, National (Jatiya) etc.
 
-Most of the features of https://www.omicronlab.com/avro-keyboard.html[Avro Keyboard] are present in OpenBangla Keyboard. 
-So Avro Keyboard users will feel at home with OpenBangla Keyboard in Linux.
+Most features of https://www.omicronlab.com/avro-keyboard.html[Avro Keyboard] are present in OpenBangla Keyboard.
+So Avro Keyboard users will feel right at home in Linux with OpenBangla Keyboard.
 
 OpenBangla Keyboard is the default Bangla writing software for http://www.magpieos.net[MagpieOS], a Bangladeshi Linux distribution.
 
@@ -39,48 +39,55 @@ image:https://img.shields.io/discord/436879388362014740.svg[Discord, link=https:
 
 CAUTION: This project is powered by github 🌟s. Go ahead and *star* it please
 
-https://github.com/OpenBangla/OpenBangla-Keyboard/projects/1[**We're working towards the version 2.0 of the OpenBangla Keyboard!**]
+https://github.com/OpenBangla/OpenBangla-Keyboard/projects/1[**We're working towards version 2.0 of OpenBangla Keyboard!**]
 
- 
+
 toc::[]
 
 
 == Features
-* Features Avro Keyboard like Top Bar for easy configuration.
+* Features a __Top Bar__ like Avro Keyboard for easy configuration.
+* Layout Viewer
 * Phonetic Keyboard Layout (Avro Phonetic)
-  ** 100% compatibility with the current Avro Phonetic scheme.
+  ** 100% compatibility with current Avro Phonetic scheme.
   ** Dictionary support can predict and suggest phonetically similar words with correct spelling on the fly.
+  ** Autocorrect feature for numerous commonly mistyped words.
   ** Autocorrect support brings commonly used English words to Bangla (like, Facebook, download etc.) even with their original English spelling.
-  ** User can add and edit Autocorrect entries.
+  ** User can add and edit autocorrect entries.
   ** Support for preview window to see originally typed text right under the cursor.
 * Fixed Keyboard Layout
-  ** OpenBangla Keyboard comes with Probhat, Munir Optima, Avro Easy, Bornona, National (Jatiya) keyboard layout out of the box.
-  ** OpenBangla Keyboard supports Avro Keyboard Layout file (version 5).
+  ** OpenBangla Keyboard comes with Probhat, Munir Optima, Avro Easy, Bornona, National (Jatiya) keyboard layouts out of the box.
+  ** OpenBangla Keyboard supports Avro Keyboard Layout files (version 5).
 * Typing Automation tools for Fixed Keyboard layout
-  ** Automatic Vowel Forming.
-  ** Old Style “Reph”.
-  ** Traditional Kar Joining.
-  ** Automatic fixing of "Chandrabindu" position.
-* Layout Viewer
+  ** Automatic vowel forming.
+  ** Old style "Reph".
+  ** Traditional "-Kar" joining.
+  ** Automatic "Chandrabindu" position fixing.
 
 
 == Installation
 
-WARNING: If you had installed OpenBangla Keyboard 1.2.0 or earlier version, please uninstall it first. Make sure you have a **working internet connection**. Your package manager might need to download dependencies when installing.
+WARNING: If you had installed OpenBangla Keyboard 1.2.0 or earlier version, please uninstall it first.
 
-Open your terminal and run this command on your bash shell. NB : It has to be **BASH**, otherwise it won't work.
+Make sure you have a **working internet connection**.
+
+Open your terminal and run this command on your shell:
 ```bash
 wget -nv -O- https://bit.ly/OBK-sh | bash
 ```
 
-If this does not workout for you please create an https://github.com/OpenBangla/OpenBangla-Keyboard/issues[Issue]. While we look into the problem you can check the https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Installing-OpenBangla-Keyboard[Wiki] for Distrowise/Distro-specific Install Instructions. After you have installed OpenBangla Keyboard, you will need to https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[configure your desktop environment].
+Then use iBus UI or run `ibus-setup` to add and activate **OpenBangla Keyboard** as input method.
+
+ After you have installed OpenBangla Keyboard, you may need to https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[configure your desktop environment].
+
+If this does not work out for you, please create an https://github.com/OpenBangla/OpenBangla-Keyboard/issues[Issue]. While we look into the problem, you can check the https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Installing-OpenBangla-Keyboard[Wiki] for distro-specific install instructions.
 
 == Community
-We are on https://discord.gg/HXK7QnJ[Discord] and Our https://www.facebook.com/openbanglakeyboard[Facebook page].
+We are on https://discord.gg/HXK7QnJ[Discord] and https://www.facebook.com/openbanglakeyboard[Facebook].
 
 == Compiling on GNU/Linux
 
-OpenBangla Keyboard currently needs following libraries and binaries
+OpenBangla Keyboard currently has the following build dependencies:
 
 * GNU GCC, G++ compiler or Clang
 * Rust 1.32.0 or later
@@ -89,21 +96,28 @@ OpenBangla Keyboard currently needs following libraries and binaries
 * Qt 5.5 or later
 * iBus development library
 
-On a Ubuntu/Debian system you can easily install them like this
+On a Ubuntu/Debian system you can easily install them like this:
 ```bash
 sudo apt-get install build-essential rustc cargo cmake libibus-1.0-dev qt5-default
 ```
 
-On a Fedora system you can easily install them like this
+On a Fedora system you can easily install them like this:
 ```bash
 sudo dnf install @buildsys-build rust cargo cmake qt5-qtdeclarative-devel ibus-devel
 ```
-On a Arch Linux / Arch Based system you can easily install them like this
+
+On a Arch Linux / Arch Based system you can easily install them like this:
 ```bash
 sudo pacman -S base-devel rust cmake qt5-base libibus
 ```
 
-After you have installed required libraries and binaries. Clone this repository `git clone --recursive https://github.com/OpenBangla/OpenBangla-Keyboard.git` and change the directory to the cloned folder and issue the commands:
+After you have installed required libraries and binaries, clone this repository and change to the cloned folder:
+```bash
+git clone --recursive https://github.com/OpenBangla/OpenBangla-Keyboard.git
+cd OpenBangla-Keyboard
+```
+
+Then issue the build commands:
 ```bash
 mkdir build && cd build
 cmake ..
@@ -111,19 +125,15 @@ make
 sudo make install
 ```
 
-Use iBus UI or run `ibus-setup` to add **OpenBangla Keyboard**. To get help on configuring OpenBangla Keyboard, visit https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configure-on-Gnome-DE[Configure on Gnome DE] or https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configure-on-Unity-DE[Configure on Unity DE].
-
 
 == Acknowledgements
- * Mehdi Hasan Khan for originally developing and maintaining Avro Keyboard,
- * Rifat Nabi for porting Avro Phonetic to Javascript,
- * https://github.com/sarim[Sarim Khan] for writing ibus-avro,
- * https://github.com/alex-spataru/QSimpleUpdater[QSimpleUpdater] for providing update mechanism.
- 
+ * Mehdi Hasan Khan, for originally developing and maintaining Avro Keyboard.
+ * Rifat Nabi, for porting Avro Phonetic to Javascript.
+ * https://github.com/sarim[Sarim Khan], for writing ibus-avro.
+ * https://github.com/alex-spataru/QSimpleUpdater[QSimpleUpdater], for providing update mechanism.
+
 
 == License
-Licensed under https://opensource.org/licenses/GPL-3.0[GPL 3 Licence].
+This project is licensed under https://opensource.org/licenses/GPL-3.0[GPL 3 Licence].
 
 Made with ❤️ by https://github.com/mominul[Muhammad Mominul Huque] and https://github.com/OpenBangla/OpenBangla-Keyboard/graphs/contributors[✨ contributors ✨]!
-
- 
