--- a/README.adoc
+++ b/README.adoc
@@ -71,16 +71,58 @@ toc::[]
 
 == Installation
 
-WARNING: If you had installed OpenBangla Keyboard 1.2.0 or earlier version, please uninstall it first.
+IMPORTANT: If you had installed OpenBangla Keyboard 1.2.0 or earlier version, please uninstall it first.
 
-Make sure you have a **working internet connection**.
+First set up our repositories for your distro, then you can install normally with your package manager.
 
-Open your terminal and run this command on your shell:
-```bash
-wget -nv -O- https://bit.ly/OBK-sh | bash
+=== Ubuntu & derivatives
+Run these commands to set up our repository:
+```
+DIST=YOUR_DISTNAME
+curl https://dl.bintray.com/openbangla/i/pub.key | sudo apt-key add -
+curl https://dl.bintray.com/openbangla/i/ubuntu.conf | sed "s/@NAME@/$DIST/" | sudo tee /etc/sources.list.d/openbangla.list
+sudo apt-get update
+```
+WARNING: Replace `YOUR_DISTNAME` with your distro's _base ubuntu codename_, eg: `bionic`, `focal`, etc.
+
+=== Debian
+Run these commands to set up our repository:
+```
+DIST=YOUR_DISTNAME
+curl https://dl.bintray.com/openbangla/i/pub.key | sudo apt-key add -
+curl https://dl.bintray.com/openbangla/i/debian.conf | sed "s/@NAME@/$DIST/" | sudo tee /etc/sources.list.d/openbangla.list
+sudo apt-get update
+```
+WARNING: Replace `YOUR_DISTNAME` with your distro's _codename_, eg: `stretch`, `buster`, etc.
+
+=== Fedora
+Run these commands to set up our repository:
+```
+sudp rpm --import https://dl.bintray.com/openbangla/i/pub.key
+curl https://dl.bintray.com/openbangla/i/fedora.conf | sudo tee /etc/yum.repos.d/openbangla.repo
 ```
 
-Then use iBus UI or run `ibus-setup` to add and activate **OpenBangla Keyboard** as input method.
+=== Archlinux
+Run these commands to set up our repository:
+
+```
+sudo pacman-key -r 0x00F3092A45393EC8
+sudo pacman-key -lsign-key 0x00F3092A45393EC8
+curl https://dl.bintray.com/i/archlinux.conf | sudo tee -a /etc/pacman.conf
+sudo pacman -Syy
+```
+
+=== Finally
+Done! Now you can use your package manager normally to get OpenBangla-Keyboard!
+```
+sudo apt-get install openbangla-keyboard
+sudo dnf install openbangla-keyboard
+sudo pacman -S openbangla-keyboard
+```
+
+You can also install by downloading necessary packages from our (https://github.com/OpenBangla/OpenBangla-Keyboard/releases)[Release] page
+
+After installation, use iBus UI or run `ibus-setup` to add and activate **OpenBangla Keyboard** as input method.
 
 After you have installed OpenBangla Keyboard, you may need to https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[configure your desktop environment].
 
