fix install cmd prompt abort

--- a/README.bn.adoc
+++ b/README.bn.adoc
@@ -75,7 +75,7 @@ WARNING: ওপেনবাংলা কিবোর্ড ১.২.০ অথব
 
 ওপেনবাংলা কিবোর্ড ইন্সটল করার জন্য টার্মিনাল উইন্ডো খুলে এই কমান্ডটি রান করুন:
 ```bash
-wget -nv -O- https://bit.ly/OBK-sh | bash
+bash -c "$(wget -nv -O- https://bit.ly/OBK-sh)"
 ```
 
 এরপর আইবাসের উইন্ডো থেকে অথবা `ibus-setup` কমান্ডের মাধ্যমে **OpenBangla Keyboard** ইনপুট পদ্ধতি হিসেবে যোগ করে নিন।
