--- a/README.bn.adoc
+++ b/README.bn.adoc
@@ -102,7 +102,7 @@ curl https://dl.bintray.com/openbangla/i/fedora.conf | sudo tee /etc/yum.repos.d
 নিচের কমান্ডগুলো দিয়ে আমাদের রিপজিটরি যোগ করে নিন:
 ```bash
 sudo pacman-key -r 0x00F3092A45393EC8
-sudo pacman-key -lsign-key 0x00F3092A45393EC8
+sudo pacman-key --lsign-key 0x00F3092A45393EC8
 curl https://dl.bintray.com/i/archlinux.conf | sudo tee -a /etc/pacman.conf
 sudo pacman -Syy
 ```
