--- a/README.bn.adoc
+++ b/README.bn.adoc
@@ -67,18 +67,57 @@ toc::[]
   ** চন্দ্রবিন্দুর অবস্থান সংশোধন।
 
 
-== ইনস্টল
+== ইনস্টল  পদ্ধতি
 
-WARNING: ওপেনবাংলা কিবোর্ড ১.২.০ অথবা পূর্ববর্তী সংস্করণ ইনস্টল করা থাকলে সেটি প্রথমে আনইনস্টল করে নিন।
+IMPORTANT: ওপেনবাংলা কিবোর্ড ১.৫.১ অথবা পূর্ববর্তী সংস্করণ ইনস্টল করা থাকলে সেটি প্রথমে আনইনস্টল করে নিন।
 
-ইনস্টলের সময় **কার্যকর ইন্টারনেট সংযোগ** প্রয়োজন।
+প্রথমে আপনার ডিস্ট্রোর জন্য আমাদের রিপজিটরি যোগ করুন, তারপর  আপনার প্যাকেজ ম্যানেজার দিয়ে স্বাভাবিকভাবে ইনস্টল করতে পারবেন।
 
-ওপেনবাংলা কিবোর্ড ইন্সটল করার জন্য টার্মিনাল উইন্ডো খুলে এই কমান্ডটি রান করুন:
+=== উবুন্টু এবং উবুন্টু-ভিত্তিক ডিস্ট্রো
+নিচের কমান্ডগুলো দিয়ে আমাদের রিপজিটরি যোগ করে নিন:
 ```bash
-bash -c "$(wget -nv -O- https://bit.ly/OBK-sh)"
+source /etc/os-release
+curl https://dl.bintray.com/openbangla/i/pub.key | sudo apt-key add -
+curl https://dl.bintray.com/openbangla/i/ubuntu.conf | sed "s/@NAME@/$UBUNTU_CODENAME/" | sudo tee /etc/apt/sources.list.d/openbangla.list
+sudo apt-get update
 ```
 
-এরপর আইবাসের উইন্ডো থেকে অথবা `ibus-setup` কমান্ডের মাধ্যমে **OpenBangla Keyboard** ইনপুট পদ্ধতি হিসেবে যোগ করে নিন।
+=== ডেবিয়ান
+নিচের কমান্ডগুলো দিয়ে আমাদের রিপজিটরি যোগ করে নিন:
+```bash
+source /etc/os-release
+curl https://dl.bintray.com/openbangla/i/pub.key | sudo apt-key add -
+curl https://dl.bintray.com/openbangla/i/debian.conf | sed "s/@NAME@/$VERSION_CODENAME/" | sudo tee /etc/apt/sources.list.d/openbangla.list
+sudo apt-get update
+```
+
+=== ফেদোরা
+নিচের কমান্ডগুলো দিয়ে আমাদের রিপজিটরি যোগ করে নিন:
+```bash
+sudp rpm --import https://dl.bintray.com/openbangla/i/pub.key
+curl https://dl.bintray.com/openbangla/i/fedora.conf | sudo tee /etc/yum.repos.d/openbangla.repo
+```
+
+=== আর্চলিনাক্স
+নিচের কমান্ডগুলো দিয়ে আমাদের রিপজিটরি যোগ করে নিন:
+```bash
+sudo pacman-key -r 0x00F3092A45393EC8
+sudo pacman-key --lsign-key 0x00F3092A45393EC8
+curl https://dl.bintray.com/openbangla/i/archlinux.conf | sudo tee -a /etc/pacman.conf
+sudo pacman -Syy
+```
+
+=== শেষ ধাপ
+ব্যাস! এখন আপনার সিস্টেমের প্যাকেজ ম্যানেজার দিয়ে স্বাভাবিকভাবেই ওপেনবাংলা কিবোর্ড ইনস্টল করতে পারবেন!
+```
+sudo apt-get install openbangla-keyboard
+sudo dnf install openbangla-keyboard
+sudo pacman -S openbangla-keyboard
+```
+
+এছাড়া আমাদের https://github.com/OpenBangla/OpenBangla-Keyboard/releases[রিলিজ] পাতা থেকে উপযুক্ত প্যাকেজ ডাউনলোড করেও ইনস্টল করতে পারেন।
+
+ইন্সটলের পরে আইবাসের উইন্ডো থেকে অথবা `ibus-setup` কমান্ডের মাধ্যমে **OpenBangla Keyboard** ইনপুট পদ্ধতি হিসেবে যোগ করে নিন।
 
 ওপেনবাংলা কিবোর্ড ইনস্টলের পর আপনার https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[ডেস্কটপ এনভায়রনমেন্ট কনফিগার] করার প্রয়োজন হতে পারে।
 
@@ -90,7 +129,7 @@ https://discord.gg/HXK7QnJ[ডিসকর্ড] এবং https://www.facebook
 
 == কম্পাইল
 
-ওপেনবাংলা কিবোর্ড কম্পাইলের তথা সোর্সকোড থেকে বিল্ড করার জন্য বর্তমানে নিম্নোলিখিত ডিপেন্ডেসিগুলো প্রয়োজন:
+ওপেনবাংলা কিবোর্ড কম্পাইল তথা সোর্সকোড থেকে বিল্ড করার জন্য বর্তমানে নিম্নোলিখিত ডিপেন্ডেসিগুলো প্রয়োজন:
 
 * GNU GCC, G++ compiler or Clang
 * Rust 1.34.0 or later
